Comment Tag Added

--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- It is called as the document type declaration (DTD)/Inform Browsers about HTML Version-->
 <html>
 <body>
 
