--- a/htmlBasics.html
+++ b/htmlBasics.html
@@ -8,7 +8,7 @@
 <body>
 <div class="containerBox">
 <h1>My First HTML Page</h1>
-<p class="center">||Angular Tutorial Basics||</p>
+<p class="center">||Angular Basics||</p>
 <div class="p15 center">
 <img src="C:\Users\abhinay.verma\Pictures\angular.png" width="300" height="300">
 </div>
